--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -62,6 +62,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">El Signal necessita el permís de la càmera per tal d\'adjuntar-ne informació, però s\'ha denegat permanentment. Si us plau, continueu cap al menú de configuració de l\'aplicació, seleccioneu Permisos i habiliteu-hi la càmera.</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Carregant mitjans...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Es comprimeix el vídeo...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">S\'ha produït un error en reproduir l\'àudio.</string>
   <!--BlockedContactsActivity-->
@@ -76,6 +77,9 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">No s\'ha pogut desar la imatge.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Captura</string>
+  <string name="CameraXFragment_change_camera_description">Canvia la càmera</string>
+  <string name="CameraXFragment_open_gallery_description">Obre la galeria</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Contactes recents</string>
   <string name="CameraContacts_signal_contacts">Contactes de Signal</string>
@@ -256,6 +260,7 @@
   <string name="CreateProfileActivity_profile_name">Nom del perfil</string>
   <string name="CreateProfileActivity_set_up_your_profile">Establiu el perfil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Els perfils del Signal estan xifrats d\'extrem a extrem, i el servei del Signal no té accés a aquesta informació.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Estableix l\'avatar</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Ús de la personalització: %s</string>
   <string name="CustomDefaultPreference_using_default">Per defecte: %s</string>
@@ -413,6 +418,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">S\'ha produït un error en baixar el missatge MMS. Toqueu per tornar a intentar-ho</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Envia-ho a %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Obre la càmera</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Feu un toc per seleccionar-ho</string>
   <!--MediaSendActivity-->
@@ -757,8 +763,12 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <!--WebRtcCallControls Content Descriptions-->
   <string name="WebRtcCallControls_contact_photo_description">Foto del contacte</string>
   <string name="WebRtcCallControls_speaker_button_description">Altaveu</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
   <string name="WebRtcCallControls_mute_button_description">Silencia</string>
+  <string name="WebRtcCallControls_your_camera_button_description">La càmera</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Canvia a la càmera posterior</string>
   <string name="WebRtcCallControls_answer_call_description">Respon la trucada</string>
+  <string name="WebRtcCallControls_reject_call_description">Rebutja la trucada</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Àudio</string>
   <string name="attachment_type_selector__audio_description">Àudio</string>
@@ -782,6 +792,9 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Introduïu un nom o número</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Neteja el text introduït</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Mostra el teclat</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Mostra el teclat numèric</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">No hi ha cap contacte.</string>
   <string name="contact_selection_group_activity__finding_contacts">S\'estan carregant els contactes...</string>
@@ -1188,6 +1201,7 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="conversation_list_batch_archive__menu_archive_selected">Arxiva la selecció</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">No arxivis la selecció</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Drecera de configuració</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Foto del contacte</string>
   <string name="conversation_list_item_view__archived">Arxivat</string>
@@ -1195,6 +1209,7 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Zip. Zilch. Zero. Res.\nJa esteu al dia!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Conversa nova</string>
+  <string name="conversation_list_fragment__open_camera_description">Obre la càmera</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Proporcioneu alguna cosa a la safata d\'entrada perquè us escriguin. Comenceu enviant un missatge a alguna amistat.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Restableix la sessió segura</string>
