--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -62,6 +62,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal richiede l\'autorizzazione all\'uso della fotocamera per scattare foto, ma questa è stata negata in modo permanente. Si prega di aprire il menu delle impostazioni dell\'app, selezionare \"Autorizzazioni\" e abilitare \"Fotocamera\".</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Caricamento media...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Compressione video...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Errore nel riprodurre l\'audio!</string>
   <!--BlockedContactsActivity-->
@@ -76,6 +77,9 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Salvataggio immagine fallito.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Scatta</string>
+  <string name="CameraXFragment_change_camera_description">Cambia camera</string>
+  <string name="CameraXFragment_open_gallery_description">Apri galleria</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Contatti recenti</string>
   <string name="CameraContacts_signal_contacts">Contatti Signal</string>
@@ -256,6 +260,7 @@
   <string name="CreateProfileActivity_profile_name">Nome profilo</string>
   <string name="CreateProfileActivity_set_up_your_profile">Imposta il tuo profilo</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">I profili di Signal sono criptati end-to-end ed il servizio di Signal non ha mai accesso a queste informazioni.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Imposta avatar</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Utilizzo di personalizzato: %s</string>
   <string name="CustomDefaultPreference_using_default">Utilizzo di predefinito: %s</string>
@@ -414,6 +419,7 @@ I suoi messaggi e le chiamate sono state disabilitate, si prega di provare e ri-
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Errore nello scaricare MMS, premi per riprovare</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Invia a %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Apri fotocamera</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Tocca per selezionare</string>
   <!--MediaSendActivity-->
@@ -760,8 +766,12 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <!--WebRtcCallControls Content Descriptions-->
   <string name="WebRtcCallControls_contact_photo_description">Foto del contatto</string>
   <string name="WebRtcCallControls_speaker_button_description">Vivavoce</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
   <string name="WebRtcCallControls_mute_button_description">Muto</string>
+  <string name="WebRtcCallControls_your_camera_button_description">La tua camera</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Passa alla camera posteriore</string>
   <string name="WebRtcCallControls_answer_call_description">Rispondi</string>
+  <string name="WebRtcCallControls_reject_call_description">Rifiuta chiamata</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Audio</string>
   <string name="attachment_type_selector__audio_description">Audio</string>
@@ -785,6 +795,9 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Inserisci nome o numero</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Cancella testo inserito</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Mostra tastiera</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Mostra tastierino numerico</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Nessun contatto.</string>
   <string name="contact_selection_group_activity__finding_contacts">Caricamento contatti...</string>
@@ -1191,6 +1204,7 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="conversation_list_batch_archive__menu_archive_selected">Archivia queste conversazioni</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Non archiviate selezionato</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Scorciatoia impostazioni</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Foto del contatto</string>
   <string name="conversation_list_item_view__archived">Archiviate</string>
@@ -1198,6 +1212,7 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Zero. Niente. Nada.\nSei a posto così! </string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Nuova conversazione</string>
+  <string name="conversation_list_fragment__open_camera_description">Apri Fotocamera</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Dai alla tua inbox qualcosa di cui parlare. Inizia inviando un messaggio ad un amico.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Azzera la sessione sicura</string>
