--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -59,6 +59,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signalで写真を撮るには、カメラへのアクセスを許可する必要がありますが、無効になっています。アプリ設定メニューから、『アプリの権限』を選び、『カメラ』へのアクセス許可を有効にしてください。</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">アップロード中...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">動画を圧縮中...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">音声再生中にエラーがありました！</string>
   <!--BlockedContactsActivity-->
@@ -73,12 +74,17 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">画像を保存できませんでした。</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">キャプチャー</string>
+  <string name="CameraXFragment_change_camera_description">カメラの変更</string>
+  <string name="CameraXFragment_open_gallery_description">ギャラリーを開く</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">最近使った連絡先</string>
   <string name="CameraContacts_signal_contacts">Signalの連絡先</string>
   <string name="CameraContacts_signal_groups">Signalのグループ</string>
+  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">最大 %d 件の会話を共有できます</string>
   <string name="CameraContacts_select_signal_recipients">Signal上の送信先を選択</string>
   <string name="CameraContacts_no_signal_contacts">Signalの連絡先はありません</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">Signalの相手に写真を送るためにカメラボタンを使用できます</string>
   <string name="CameraContacts_cant_find_who_youre_looking_for">探している人が見つかりませんか？</string>
   <string name="CameraContacts_invite_a_contact_to_join_signal">連絡先をSignalへ招待する</string>
   <string name="CameraContacts__menu_search">検索</string>
@@ -240,6 +246,7 @@
   <string name="CreateProfileActivity_profile_name">プロフィール名</string>
   <string name="CreateProfileActivity_set_up_your_profile">プロフィールの設定</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">プロフィールはエンドツーエンドで暗号化され、Signalのサービスでもアクセスできません。</string>
+  <string name="CreateProfileActivity_set_avatar_description">アバターの設定</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">カスタム利用: %s</string>
   <string name="CustomDefaultPreference_using_default">デフォルト利用: %s</string>
@@ -404,6 +411,7 @@
   <string name="MediaSendActivity_message">メッセージ</string>
   <string name="MediaSendActivity_select_recipients">送信先を選択</string>
   <string name="MediaSendActivity_signal_needs_access_to_your_contacts">連絡先を表示するには、Signalの連絡先へのアクセスを許可してください。</string>
+  <string name="MediaSendActivity_signal_needs_contacts_permission_in_order_to_show_your_contacts_but_it_has_been_permanently_denied">Signalで連絡先を表示するには、連絡先へのアクセスを許可する必要がありますが、現在は無効になっています。アプリ設定メニューから、アプリの権限を選び、連絡先へのアクセスを許可してください。</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="other">%d以上のアイテムを共有できません</item>
   </plurals>
@@ -731,7 +739,10 @@
   <string name="WebRtcCallControls_speaker_button_description">スピーカー</string>
   <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
   <string name="WebRtcCallControls_mute_button_description">ミュート</string>
+  <string name="WebRtcCallControls_your_camera_button_description">あなたのカメラ</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">リアカメラに変更</string>
   <string name="WebRtcCallControls_answer_call_description">電話に出る</string>
+  <string name="WebRtcCallControls_reject_call_description">通話を拒否</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">音声</string>
   <string name="attachment_type_selector__audio_description">音声</string>
@@ -755,6 +766,9 @@
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">名前もしくは番号を入力</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">テキストを消去</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">キーボードを表示</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">ダイアル画面を表示</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">連絡先はありません。</string>
   <string name="contact_selection_group_activity__finding_contacts">連絡先を読み込み中…</string>
@@ -1153,6 +1167,7 @@
   <string name="conversation_list_batch_archive__menu_archive_selected">選択した会話をアーカイブに移動</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">選択した会話をアーカイブから取り除く</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">設定のショートカット</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">連絡先の画像</string>
   <string name="conversation_list_item_view__archived">アーカイブ済み</string>
