--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -59,6 +59,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal cần quyền truy cập Máy ảnh để chụp ảnh, nhưng đã bị từ chối vĩnh viễn. Vui lòng mở cài đặt ứng dụng, chọn \"Quyền\" và bật \"Máy ảnh\".</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Đang tải tệp lên...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Nén video...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Lỗi chạy tập tin âm thanh!</string>
   <!--BlockedContactsActivity-->
@@ -73,6 +74,9 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Không thể lưu ảnh.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Chụp</string>
+  <string name="CameraXFragment_change_camera_description">Thay đổi camera</string>
+  <string name="CameraXFragment_open_gallery_description">Mở bộ sưu tập</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Liên hệ gần đây</string>
   <string name="CameraContacts_signal_contacts">Liên hệ Signal</string>
@@ -242,6 +246,7 @@
   <string name="CreateProfileActivity_profile_name">Tên của bạn</string>
   <string name="CreateProfileActivity_set_up_your_profile">Thiết lập hồ sơ</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Hồ sơ Signal được mã hóa đầu cuối và dịch vụ Signal không thể truy cập thông tin này.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Đặt ảnh đại diện</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Dùng tùy chỉnh: %s</string>
   <string name="CustomDefaultPreference_using_default">Dùng mặc định: %s</string>
@@ -395,6 +400,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Lỗi tải tin nhắn MMS, nhấn để thử lại</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Gửi tới %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Mở camera</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Nhấn để chọn</string>
   <!--MediaSendActivity-->
@@ -736,8 +742,12 @@ Nhận thông tin trao đổi chìa khóa về phiên bản giao thức không h
   <!--WebRtcCallControls Content Descriptions-->
   <string name="WebRtcCallControls_contact_photo_description">Ảnh liên hệ</string>
   <string name="WebRtcCallControls_speaker_button_description">Loa</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
   <string name="WebRtcCallControls_mute_button_description">Im lặng</string>
+  <string name="WebRtcCallControls_your_camera_button_description">Camera của bạn</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Chuyển sang camera sau</string>
   <string name="WebRtcCallControls_answer_call_description">Trả lời cuộc gọi</string>
+  <string name="WebRtcCallControls_reject_call_description">Từ chối cuộc gọi</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Âm thanh</string>
   <string name="attachment_type_selector__audio_description">Âm thanh</string>
@@ -761,6 +771,9 @@ Nhận thông tin trao đổi chìa khóa về phiên bản giao thức không h
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Điền tên hoặc số</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Xóa văn bản đã nhập </string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Hiện bàn phím</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">HIện bàn phím quay số</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Không có liên hệ.</string>
   <string name="contact_selection_group_activity__finding_contacts">Đang tải danh bạ...</string>
@@ -1161,6 +1174,7 @@ Các tin nhắn và cuộc gọi riêng tư miễn phí đến người dùng Si
   <string name="conversation_list_batch_archive__menu_archive_selected">Lưu trữ mục đã chọn</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Bỏ lưu trữ mục đã chọn</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Cài đặt phím tắt</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Ảnh Chân Dung Liên Hệ</string>
   <string name="conversation_list_item_view__archived">Đã lưu trữ</string>
@@ -1168,6 +1182,7 @@ Các tin nhắn và cuộc gọi riêng tư miễn phí đến người dùng Si
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Sạch. Sành. Sanh.\nBạn không bỏ lỡ gì cả!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Cuộc trò chuyện mới</string>
+  <string name="conversation_list_fragment__open_camera_description">Mở Camera</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Hãy làm hộp thư đến không còn trống trải. Bắt đầu bằng cách gửi tin nhắn cho một người bạn.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Tái thiết lập phiên bảo mật</string>
