--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -59,6 +59,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal 需要相機的權限用以拍照，但是現在被設定為永久拒絕使用。請到應用程式設定中，選取「權限」，並啟用「相機」的權限。</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">上傳媒體檔案</string>
+  <string name="AttachmentUploadJob_compressing_video_start">壓縮影片...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">播放音訊時出現錯誤！</string>
   <!--BlockedContactsActivity-->
@@ -73,6 +74,9 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">儲存照片失敗。</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">擷取</string>
+  <string name="CameraXFragment_change_camera_description">切換相機</string>
+  <string name="CameraXFragment_open_gallery_description">開啟相簿</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">最近的聯絡人</string>
   <string name="CameraContacts_signal_contacts">Signal 聯絡人</string>
@@ -242,6 +246,7 @@
   <string name="CreateProfileActivity_profile_name">使用者名稱</string>
   <string name="CreateProfileActivity_set_up_your_profile">設定你的資訊</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal 資料是點對點加密，及Signal 服務絕不會讀取這些資訊。</string>
+  <string name="CreateProfileActivity_set_avatar_description">設定頭像</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">使用自訂：%s</string>
   <string name="CustomDefaultPreference_using_default">使用預設：%s</string>
@@ -395,6 +400,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">下載MMS訊息時發生錯誤，點擊重試</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">傳送給 %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">開啟相機</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">點取以選擇</string>
   <!--MediaSendActivity-->
@@ -739,8 +745,12 @@
   <!--WebRtcCallControls Content Descriptions-->
   <string name="WebRtcCallControls_contact_photo_description">聯絡人的相片</string>
   <string name="WebRtcCallControls_speaker_button_description">揚聲器</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">藍牙</string>
   <string name="WebRtcCallControls_mute_button_description">靜音對話</string>
+  <string name="WebRtcCallControls_your_camera_button_description">你的相機</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">切換至後相機</string>
   <string name="WebRtcCallControls_answer_call_description">接聽通話</string>
+  <string name="WebRtcCallControls_reject_call_description">拒絕來電</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">音訊</string>
   <string name="attachment_type_selector__audio_description">音訊</string>
@@ -764,6 +774,9 @@
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">輸入名字或號碼</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">清除已輸入的文字</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">顯示鍵盤</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">顯示撥號鍵</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">無聯絡人</string>
   <string name="contact_selection_group_activity__finding_contacts">載入聯絡人中…</string>
@@ -1162,6 +1175,7 @@
   <string name="conversation_list_batch_archive__menu_archive_selected">已選擇存檔</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">取消存檔已選擇的</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">設定捷徑</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">聯絡人相片</string>
   <string name="conversation_list_item_view__archived">存檔</string>
@@ -1169,6 +1183,7 @@
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">沒有未讀訊息。\n你已經都讀過囉！</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">新對話</string>
+  <string name="conversation_list_fragment__open_camera_description">開啟相機</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">何不給你的收件夾寫些東西呢？從發個訊息給好友開始吧！</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">重設安全對話</string>
